  generating, describe "INTERMediatorOnPage.doBeforeConstruct = function(){..};" on any valid place.
  The node having the id attribute "nonsupportmessage" will disappear after page generating. If you
  require to the another id value, you can set it into params.php as the value "$nonSupportMessageId".
- Creating Cross Table. It contains 3 contexts for colomn, row and value cells.
  See the sample Samples/Practices/crosstable.html.
- The second "option" parameter of IM_Entry function can have the key "local-context" as the array of
  "key" and "value" keyed elements. These affect as the initial values of relevant local context value.
- The variable "$valuesForLocalContext" in params.php supplies initial values for local context.
  The value of this variable has to be an associated array with key and value.
- Support the script parameters for FileMaker Server (controlled by 'parameter' key of 'script' key).
- FileUploader can detect exceeding file size limit and returns valid error messages.
- New Sample "Sample_API" is added. This is for explanation of server-side apis.
- On the Master-Detail style UI, the scrolled point in Master display can be retrieved when the page
  is backed from the Detail display.
- Add "CWPKit" in "lib" directory for FileMaker Server to remove a dependency of FX.php in the future.
- Customizing X-Frame-Options and Content-Security-Policy headers in the params.php file.
- Customizing the file path format of uploaded file with params.php file.
- The IMLibUI.valueChange method is locked with the id attribute value to prevent the error when multiple
  updating processes run simultaneously.
- Supporting jQuery File Upload. Check the file Samples/Sample_website/fileupload_jQuery_MySQL.html.
- [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
  Authentication for mobile devices. The affected version is 5.3 only.
- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.