@@ -15,6 +15,8 @@ Ver.5.4 (in development)
   generating, describe "INTERMediatorOnPage.doBeforeConstruct = function(){..};" on any valid place.
   The node having the id attribute "nonsupportmessage" will disappear after page generating. If you
   require to the another id value, you can set it into params.php as the value "$nonSupportMessageId".
+- If the automatic calling to construct method doesn't requre, descirbe the below in doBeforeConstruct
+  or prior to that: INTERMediatorOnPage.isAutoConstruct = false;
 - Creating Cross Table. It contains 3 contexts for colomn, row and value cells.
   See the sample Samples/Practices/crosstable.html.
 - The second "option" parameter of IM_Entry function can have the key "local-context" as the array of
